@@ -4,7 +4,7 @@ use warnings;
 use Module::Build;
 
 my $build = Module::Build->new(
-    module_name => 'Test::MyDeps',
+    module_name => 'Test::DependentModules',
     license     => 'perl',
     requires    => {
         'autodie'          => '0',
@@ -26,6 +26,13 @@ my $build = Module::Build->new(
     create_readme      => 1,
     sign               => 1,
     create_makefile_pl => 'traditional',
+    meta_merge         => {
+        resources => {
+            bugtracker =>
+                'http://rt.cpan.org/NoAuth/Bugs.html?Dist=Test-DependentModules',
+            repository => 'http://hg.urth.org/hg/Test-DependentModules',
+        },
+    },
 );
 
 $build->create_build_script;
